--- a/django/otto/static/css/variables.css
+++ b/django/otto/static/css/variables.css
@@ -68,6 +68,11 @@
   --security-PA-border: #fcda72;
   --security-PB-border: #fb7380;
   --btn-secondary: #f3f3f3;
+  --welcome-btn-bg: #e6e6e6;
+  --search-bar-bg-hover: #e6e6e6;
+  --chat-delete-text: #b10e0e;
+  --prompt-send-btn-bg: white;
+  --terms-of-use-agree-text: #00be5c;
 }
 
 [data-bs-theme="dark"] {
@@ -116,7 +121,7 @@
   --app-border: #ccc;
   --chat-footer-border: #ddd;
   --chat-outer-bg: #f8f9fa;
-  --chat-message-bg: #ffffff80;
+  --chat-message-bg: #e0e0e0;
   --chat-message-border: #00000033;
   --chat-message-progress-bar-bg: #5022bd73;
   --chat-file-drop: #000000cc;
@@ -134,6 +139,11 @@
   --text-secondary: #a7a7a7;
   --btn-hover: #0f0f14b5;
   --btn-secondary: #141416ea;
+  --welcome-btn-bg: #474747;
+  --search-bar-bg-hover: #474747;
+  --chat-delete-text: #ff5e5e;
+  --prompt-send-btn-bg: #1a1e20;
+  --terms-of-use-agree-text: #00aa52;
 }
 
 .navbar .nav-link {
